Check if we could open the log file before writing to it

https://bugs.freedesktop.org/show_bug.cgi?id=28795